--- a/react-imooc/package.json
+++ b/react-imooc/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/redux-thunk": "^2.1.0",
     "antd-mobile": "^2.3.1",
     "mongoose": "^5.9.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "customize-cra": "^0.9.1",
     "react-app-rewired": "^2.1.5"
   },
