--- a/react-imooc/package.json
+++ b/react-imooc/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "cookie-parser": "^1.4.5",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -85,6 +86,13 @@
       "react-app"
     ],
     "plugins": [
+      [
+        "import",
+        {
+          "libraryName": "antd-mobile",
+          "style": "css"
+        }
+      ],
       [
         "@babel/plugin-proposal-decorators",
         {
